--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -125,3 +125,29 @@ footer {
     stroke: #fff;
     stroke-width: 2;
 }
+
+/* sample page */
+#sample .container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    background-color: #0f0f0f;
+    color: #fff;
+}
+
+#sample a,
+#sample p {
+    display: block;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+#sample a {
+    color: #5f5f5f;
+}
